bindings/rust/idax-sys/shim/idax_shim.h

/* ═══════════════════════════════════════════════════════════════════════════
 * Script / IDC values and synchronous execution (ida::script)
 * ═══════════════════════════════════════════════════════════════════════════ */

typedef void* IdaxScriptValueHandle;
typedef struct IdaxScriptResolvedName {
    const char* name;
    uint64_t value;
} IdaxScriptResolvedName;
typedef struct IdaxScriptCompileOptions {
    int only_safe_functions;
    const IdaxScriptResolvedName* resolved_names;
    size_t resolved_name_count;
} IdaxScriptCompileOptions;
typedef struct IdaxScriptFileCompileOptions {
    int delete_macros_after_compilation;
    int allow_program_labels;
    int only_safe_functions;
} IdaxScriptFileCompileOptions;
typedef struct IdaxScriptCompilationResult {
    int succeeded;
    char* error;
} IdaxScriptCompilationResult;
typedef struct IdaxScriptExecutionResult {
    int succeeded;
    IdaxScriptValueHandle value;
    char* error;
} IdaxScriptExecutionResult;
typedef struct IdaxScriptIntegerExecutionResult {
    int succeeded;
    int64_t value;
    char* error;
} IdaxScriptIntegerExecutionResult;
int idax_script_value_set_attribute(IdaxScriptValueHandle value,
                                    const char* name,
                                    IdaxScriptValueHandle attribute,
                                    int use_handler);
int idax_script_value_attribute_names(IdaxScriptValueHandle value,
                                      char*** out, size_t* count);
void idax_script_string_array_free(char** values, size_t count);
int idax_script_value_remove_attribute(IdaxScriptValueHandle value,
                                       const char* name, int* out);
int idax_script_value_slice(IdaxScriptValueHandle value, size_t begin,
                            size_t end, IdaxScriptValueHandle* out);
int idax_script_value_replace_slice(IdaxScriptValueHandle value, size_t begin,
                                    size_t end,
                                    IdaxScriptValueHandle replacement);
int idax_script_value_dereference(IdaxScriptValueHandle value, int mode,
                                  IdaxScriptValueHandle* out);
void idax_script_compilation_result_free(IdaxScriptCompilationResult* result);
void idax_script_execution_result_free(IdaxScriptExecutionResult* result);
void idax_script_integer_execution_result_free(
    IdaxScriptIntegerExecutionResult* result);
int idax_script_evaluate(const char* expression, uint64_t where,
                         IdaxScriptExecutionResult* out);
int idax_script_evaluate_idc(const char* expression, uint64_t where,
                             IdaxScriptExecutionResult* out);
int idax_script_evaluate_integer(const char* expression, uint64_t where,
                                 IdaxScriptIntegerExecutionResult* out);
int idax_script_compile_file(const char* path,
                             const IdaxScriptFileCompileOptions* options,
                             IdaxScriptCompilationResult* out);
int idax_script_compile_text(const char* source,
                             const IdaxScriptCompileOptions* options,
                             IdaxScriptCompilationResult* out);
int idax_script_compile_snippet(const char* function_name, const char* body,
                                const IdaxScriptCompileOptions* options,
                                IdaxScriptCompilationResult* out);
int idax_script_call(const char* function_name,
                     const IdaxScriptValueHandle* arguments,
                     size_t argument_count,
                     const IdaxScriptResolvedName* resolved_names,
                     size_t resolved_name_count,
                     IdaxScriptExecutionResult* out);
int idax_script_execute_script(const char* path, const char* function_name,
                               const IdaxScriptValueHandle* arguments,
                               size_t argument_count,
                               const IdaxScriptFileCompileOptions* options,
                               IdaxScriptExecutionResult* out);
int idax_script_evaluate_snippet(const char* source,
                                 const IdaxScriptResolvedName* resolved_names,
                                 size_t resolved_name_count,
                                 IdaxScriptExecutionResult* out);
int idax_script_set_include_paths(const char* const* paths, size_t count);
int idax_script_append_include_paths(const char* const* paths, size_t count);
int idax_script_resolve_file(const char* file, char** out, int* has_value);
int idax_script_execute_system_script(const char* file,
                                      int complain_if_missing);
int idax_script_function_names(const char* prefix, size_t maximum,
                               char*** out, size_t* count);
int idax_script_global(const char* name, IdaxScriptValueHandle* out,
                       int* has_value);
int idax_script_set_global(const char* name, IdaxScriptValueHandle value,
                           int* created);
int idax_script_reference_global(const char* name,
                                 IdaxScriptValueHandle* out);
/* ═══════════════════════════════════════════════════════════════════════════
 * Database (ida::database)
 * ═══════════════════════════════════════════════════════════════════════════ */

int idax_database_init(int argc, char** argv);
int idax_database_open(const char* path, int auto_analysis);
int idax_database_open_binary(const char* path, int mode);
int idax_database_open_non_binary(const char* path, int mode);
int idax_database_save(void);
int idax_database_save_to(const char* output_database_path);
int idax_database_close(int save);
int idax_database_file_to_database(const char* file_path, int64_t file_offset,
                                   uint64_t ea, uint64_t size,
                                   int patchable, int remote);
int idax_database_memory_to_database(const uint8_t* bytes, size_t len,
                                     uint64_t ea, int64_t file_offset);
typedef struct IdaxDatabaseCompilerInfo {
    uint32_t id;
    int      uncertain;
    char*    name;
    char*    abbreviation;
} IdaxDatabaseCompilerInfo;
int idax_database_compiler_info(IdaxDatabaseCompilerInfo* out);
void idax_database_compiler_info_free(IdaxDatabaseCompilerInfo* info);
typedef struct IdaxDatabaseImportSymbol {
    uint64_t address;
    char*    name;
    uint64_t ordinal;
} IdaxDatabaseImportSymbol;
typedef struct IdaxDatabaseImportModule {
    size_t                    index;
    char*                     name;
    IdaxDatabaseImportSymbol* symbols;
    size_t                    symbol_count;
} IdaxDatabaseImportModule;
int idax_database_import_modules(IdaxDatabaseImportModule** out, size_t* count);
void idax_database_import_modules_free(IdaxDatabaseImportModule* modules,
                                       size_t count);
typedef struct IdaxDatabaseSnapshot {
    int64_t id;
    uint16_t flags;
    char* description;
    char* filename;
    struct IdaxDatabaseSnapshot* children;
    size_t child_count;
} IdaxDatabaseSnapshot;