bindings/rust/idax-sys/src/bindings.rs

unsafe extern "C" {
    pub fn idax_script_value_set_attribute(
        value: IdaxScriptValueHandle,
        name: *const ::std::os::raw::c_char,
        attribute: IdaxScriptValueHandle,
        use_handler: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_script_value_attribute_names(
        value: IdaxScriptValueHandle,
        out: *mut *mut *mut ::std::os::raw::c_char,
        count: *mut usize,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_script_string_array_free(values: *mut *mut ::std::os::raw::c_char, count: usize);
}
unsafe extern "C" {
    pub fn idax_script_value_remove_attribute(
        value: IdaxScriptValueHandle,
        name: *const ::std::os::raw::c_char,
        out: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_script_value_slice(
        value: IdaxScriptValueHandle,
        begin: usize,
        end: usize,
        out: *mut IdaxScriptValueHandle,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_script_value_replace_slice(
        value: IdaxScriptValueHandle,
        begin: usize,
        end: usize,
        replacement: IdaxScriptValueHandle,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_script_value_dereference(
        value: IdaxScriptValueHandle,
        mode: ::std::os::raw::c_int,
        out: *mut IdaxScriptValueHandle,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_script_compilation_result_free(result: *mut IdaxScriptCompilationResult);
}
unsafe extern "C" {
    pub fn idax_script_execution_result_free(result: *mut IdaxScriptExecutionResult);
}
unsafe extern "C" {
    pub fn idax_script_integer_execution_result_free(result: *mut IdaxScriptIntegerExecutionResult);
}
unsafe extern "C" {
    pub fn idax_script_evaluate(
        expression: *const ::std::os::raw::c_char,
        where_: u64,
        out: *mut IdaxScriptExecutionResult,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_script_evaluate_idc(
        expression: *const ::std::os::raw::c_char,
        where_: u64,
        out: *mut IdaxScriptExecutionResult,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_script_evaluate_integer(
        expression: *const ::std::os::raw::c_char,
        where_: u64,
        out: *mut IdaxScriptIntegerExecutionResult,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_script_compile_file(
        path: *const ::std::os::raw::c_char,
        options: *const IdaxScriptFileCompileOptions,
        out: *mut IdaxScriptCompilationResult,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_script_compile_text(
        source: *const ::std::os::raw::c_char,
        options: *const IdaxScriptCompileOptions,
        out: *mut IdaxScriptCompilationResult,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_script_compile_snippet(
        function_name: *const ::std::os::raw::c_char,
        body: *const ::std::os::raw::c_char,
        options: *const IdaxScriptCompileOptions,
        out: *mut IdaxScriptCompilationResult,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_script_call(
        function_name: *const ::std::os::raw::c_char,
        arguments: *const IdaxScriptValueHandle,
        argument_count: usize,
        resolved_names: *const IdaxScriptResolvedName,
        resolved_name_count: usize,
        out: *mut IdaxScriptExecutionResult,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_script_execute_script(
        path: *const ::std::os::raw::c_char,
        function_name: *const ::std::os::raw::c_char,
        arguments: *const IdaxScriptValueHandle,
        argument_count: usize,
        options: *const IdaxScriptFileCompileOptions,
        out: *mut IdaxScriptExecutionResult,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_script_evaluate_snippet(
        source: *const ::std::os::raw::c_char,
        resolved_names: *const IdaxScriptResolvedName,
        resolved_name_count: usize,
        out: *mut IdaxScriptExecutionResult,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_script_set_include_paths(
        paths: *const *const ::std::os::raw::c_char,
        count: usize,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_script_append_include_paths(
        paths: *const *const ::std::os::raw::c_char,
        count: usize,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_script_resolve_file(
        file: *const ::std::os::raw::c_char,
        out: *mut *mut ::std::os::raw::c_char,
        has_value: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_script_execute_system_script(
        file: *const ::std::os::raw::c_char,
        complain_if_missing: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_script_function_names(
        prefix: *const ::std::os::raw::c_char,
        maximum: usize,
        out: *mut *mut *mut ::std::os::raw::c_char,
        count: *mut usize,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_script_global(
        name: *const ::std::os::raw::c_char,
        out: *mut IdaxScriptValueHandle,
        has_value: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_script_set_global(
        name: *const ::std::os::raw::c_char,
        value: IdaxScriptValueHandle,
        created: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_script_reference_global(
        name: *const ::std::os::raw::c_char,
        out: *mut IdaxScriptValueHandle,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_database_init(
        argc: ::std::os::raw::c_int,
        argv: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_database_open(
        path: *const ::std::os::raw::c_char,
        auto_analysis: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_database_open_binary(
        path: *const ::std::os::raw::c_char,
        mode: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_database_open_non_binary(
        path: *const ::std::os::raw::c_char,
        mode: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_database_save() -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_database_save_to(
        output_database_path: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_database_close(save: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_database_file_to_database(
        file_path: *const ::std::os::raw::c_char,
        file_offset: i64,
        ea: u64,
        size: u64,
        patchable: ::std::os::raw::c_int,
        remote: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_database_memory_to_database(
        bytes: *const u8,
        len: usize,
        ea: u64,
        file_offset: i64,
    ) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IdaxDatabaseCompilerInfo {
    pub id: u32,
    pub uncertain: ::std::os::raw::c_int,
    pub name: *mut ::std::os::raw::c_char,
    pub abbreviation: *mut ::std::os::raw::c_char,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of IdaxDatabaseCompilerInfo"]
        [::std::mem::size_of::<IdaxDatabaseCompilerInfo>() - 24usize];
    ["Alignment of IdaxDatabaseCompilerInfo"]
        [::std::mem::align_of::<IdaxDatabaseCompilerInfo>() - 8usize];
    ["Offset of field: IdaxDatabaseCompilerInfo::id"]
        [::std::mem::offset_of!(IdaxDatabaseCompilerInfo, id) - 0usize];
    ["Offset of field: IdaxDatabaseCompilerInfo::uncertain"]
        [::std::mem::offset_of!(IdaxDatabaseCompilerInfo, uncertain) - 4usize];
    ["Offset of field: IdaxDatabaseCompilerInfo::name"]
        [::std::mem::offset_of!(IdaxDatabaseCompilerInfo, name) - 8usize];
    ["Offset of field: IdaxDatabaseCompilerInfo::abbreviation"]
        [::std::mem::offset_of!(IdaxDatabaseCompilerInfo, abbreviation) - 16usize];
};
impl Default for IdaxDatabaseCompilerInfo {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
unsafe extern "C" {
    pub fn idax_database_compiler_info(out: *mut IdaxDatabaseCompilerInfo)
        -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_database_compiler_info_free(info: *mut IdaxDatabaseCompilerInfo);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IdaxDatabaseImportSymbol {
    pub address: u64,
    pub name: *mut ::std::os::raw::c_char,
    pub ordinal: u64,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of IdaxDatabaseImportSymbol"]
        [::std::mem::size_of::<IdaxDatabaseImportSymbol>() - 24usize];
    ["Alignment of IdaxDatabaseImportSymbol"]
        [::std::mem::align_of::<IdaxDatabaseImportSymbol>() - 8usize];
    ["Offset of field: IdaxDatabaseImportSymbol::address"]
        [::std::mem::offset_of!(IdaxDatabaseImportSymbol, address) - 0usize];
    ["Offset of field: IdaxDatabaseImportSymbol::name"]
        [::std::mem::offset_of!(IdaxDatabaseImportSymbol, name) - 8usize];
    ["Offset of field: IdaxDatabaseImportSymbol::ordinal"]
        [::std::mem::offset_of!(IdaxDatabaseImportSymbol, ordinal) - 16usize];
};
impl Default for IdaxDatabaseImportSymbol {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IdaxDatabaseImportModule {
    pub index: usize,
    pub name: *mut ::std::os::raw::c_char,
    pub symbols: *mut IdaxDatabaseImportSymbol,
    pub symbol_count: usize,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of IdaxDatabaseImportModule"]
        [::std::mem::size_of::<IdaxDatabaseImportModule>() - 32usize];
    ["Alignment of IdaxDatabaseImportModule"]
        [::std::mem::align_of::<IdaxDatabaseImportModule>() - 8usize];
    ["Offset of field: IdaxDatabaseImportModule::index"]
        [::std::mem::offset_of!(IdaxDatabaseImportModule, index) - 0usize];
    ["Offset of field: IdaxDatabaseImportModule::name"]
        [::std::mem::offset_of!(IdaxDatabaseImportModule, name) - 8usize];
    ["Offset of field: IdaxDatabaseImportModule::symbols"]
        [::std::mem::offset_of!(IdaxDatabaseImportModule, symbols) - 16usize];
    ["Offset of field: IdaxDatabaseImportModule::symbol_count"]
        [::std::mem::offset_of!(IdaxDatabaseImportModule, symbol_count) - 24usize];
};
impl Default for IdaxDatabaseImportModule {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
unsafe extern "C" {
    pub fn idax_database_import_modules(
        out: *mut *mut IdaxDatabaseImportModule,
        count: *mut usize,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_database_import_modules_free(modules: *mut IdaxDatabaseImportModule, count: usize);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IdaxDatabaseSnapshot {
    pub id: i64,
    pub flags: u16,
    pub description: *mut ::std::os::raw::c_char,
    pub filename: *mut ::std::os::raw::c_char,
    pub children: *mut IdaxDatabaseSnapshot,
    pub child_count: usize,
}
